Code commit@Rahul
add master entity class

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 </head>
-<body>
+<body style="background: rgb(192, 192, 192);">
 	
 	<div class="limiter">
 		<div class="container-login100">
@@ -36,7 +36,7 @@
 		<div class="card">
 		
 		
-			<div class="wrap-login100 p-t-85 p-b-15 card-body" style="box-shadow:black">
+			<div class="wrap-login100 p-t-85 p-b-15 card-body" style="text-shadow:black">
 				<form class="login100-form validate-form">
 					<span class="login100-form-title p-b-40">
 						Welcome
