--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -3,10 +3,10 @@
 }
  
 header {
-    background-color: blue;
+    background-color: #658cf0;
     padding: 5px;
     text-align: center;
-    font-size: 35px;
+    font-size: 28px;
     color: white;
 }
  
@@ -62,6 +62,18 @@ label {
 .form-group input {
     font-family: Arial, sans-serif;
     font-size:12px;
+    height:25px;
+}
+
+
+.middle-form{
+ position:relative;
+}
+.form{
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-60%);
 }
 
 
