code commit@Rahul
master layout of Modue, Sub-Module,Program and item master

--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -35,14 +35,14 @@
 	<div id="home-main-content">
 
 
-		 <div class="form-inline text-center">
-                <div class="col-md-12 form-group">
-                    <label class="col-sm-6 col-form-label" for="name">Search For Items</label>
-                    <input type="text" class="form-control" name="name" id="name">
-                </div>
-            </div>
-            <p></p>
-            <p></p>
+		<div class="form-inline text-center">
+			<div class="col-md-12 form-group">
+				<label class="col-sm-6 col-form-label" for="name">Search For
+					Items</label> <input type="text" class="form-control" name="name" id="name">
+			</div>
+		</div>
+		<p></p>
+		<p></p>
 		<br>
 
 		<div class="container-fluid">
@@ -255,15 +255,156 @@
 
 
 				<div id="taxdetail" class="tab-pane fade">
-					<div>
-						<p>item detail</p>
+					<div class="form-border">
+						<div class="form-group row">
+							<label for="staticEmail" class="col-sm-2 col-form-label">Product Group</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control-plaintext"
+									id="staticEmail" placeholder="product group">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label for="staticEmail" class="col-sm-2 col-form-label">Purchase HSN Code</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control-plaintext"
+									id="staticEmail" placeholder="purchase hsn code">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label for="staticEmail" class="col-sm-2 col-form-label">Sales HSN Code</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control-plaintext"
+									id="staticEmail" placeholder="sales hsn code">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label for="staticEmail" class="col-sm-2 col-form-label">CGST(%)</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control-plaintext"
+									id="staticEmail" placeholder="">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label for="staticEmail" class="col-sm-2 col-form-label">SGST(%)</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control-plaintext"
+									id="staticEmail" placeholder="">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label for="staticEmail" class="col-sm-2 col-form-label">IGST(%)</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control-plaintext"
+									id="staticEmail" placeholder="">
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div id="packing" class="tab-pane fade">
-					<div>
-						<p>item detail</p>
-					</div>
+					<div class="form-border">
+			
+
+			<table class="table table-sm">
+				<thead>
+					<tr>
+						<th scope="col">Packing Code</th>
+						<th scope="col">Packing Name</th>
+						<th scope="col">Unit Name</th>
+						<th scope="col">Quantity</th>
+						<th scope="col">Barcode</th>
+						
+
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row"><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></th>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						
+
+
+					</tr>
+					<tr>
+						<th scope="row"><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></th>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						
+
+					</tr>
+					<tr>
+						<th scope="row"><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></th>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+
+						<td><fieldset>
+								<input type="text" class="form-control form-control-sm"
+									placeholder="">
+							</fieldset></td>
+						
+
+					</tr>
+
+				</tbody>
+			</table>
+
+			<a href="#">Add Another</a>
+
+		</div>
 				</div>
 
 
