--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,79 +1,86 @@
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
- 
+
 header {
-    background-color: #658cf0;
-    padding: 5px;
-    text-align: center;
-    font-size: 28px;
-    color: white;
+	background-color: #658cf0;
+	padding: 5px;
+	text-align: center;
+	font-size: 28px;
+	color: white;
 }
- 
+
 nav {
-    float: left;
-    width: 20%;
-    height: 91vh;
-    background: #ccc;
-    padding: 20px;
-    position: position-fixed;
+	float: left;
+	width: 20%;
+	height: 91vh;
+	background: #ccc;
+	padding: 20px;
+	position: position-fixed;
 }
- 
+
 nav ul {
-    list-style-type: none;
-    padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
- 
+
 article {
-    float: left;
-    padding: 20px;
-    width: 80%;
-    background-color: #f1f1f1;
-    height: 91vh;
-    display:flex;
-    overflow-y: auto;
+	float: left;
+	padding: 20px;
+	width: 80%;
+	background-color: #f1f1f1;
+	height: 91vh;
+	display: flex;
+	overflow-y: auto;
 }
- 
+
 section:after {
-    content: "";
-    display: table;
-    clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 
- 
 @media ( max-width : 600px) {
-    nav, article {
-        width: 100%;
-        height: auto;
-    }
+	nav, article {
+		width: 100%;
+		height: auto;
+	}
 }
 
-.form-border{
+.form-border {
 	border: 1px gray;
-    padding: 10px;
-    overflow:auto;
-    box-shadow: 0 10px 20px rgba(0,0,0,.1);
+	padding: 10px;
+	overflow: auto;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
 }
 
 label {
-	font-size:11px;
+	font-size: 11px;
 }
 
 .form-group input {
-    font-family: Arial, sans-serif;
-    font-size:12px;
-    height:25px;
+	font-family: Arial, sans-serif;
+	font-size: 12px;
+	height: 25px;
 }
 
-
-.middle-form{
- position:relative;
-}
-.form{
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%,-60%);
+.middle-form {
+	position: relative;
 }
 
+.form {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -60%);
+}
 
+.m-10 {
+	margin: 10px;
+}
+
+.button {
+	height:32px;
+	display: inline-flex;
+	align-items: center;
+}
