--- a/src/main/resources/templates/layouts/editview/editModule.html
+++ b/src/main/resources/templates/layouts/editview/editModule.html
@@ -38,41 +38,58 @@
 
 	<div id="home-main-content">
 
-		<h3>Sub-Module Master</h3>
+		<h3>Module Master</h3>
 
 
-		<form th:action="@{/sub-module/}">
+		<form th:action="@{/module/}" method="POST" th:object="${module}">
+		<div class="form-border">
 
-			<div class="form-border">
-
+			<div class="row">
 				<div class="form-group col-md-6">
-					<label for="inputEmail4">Sub Module Code</label> <input
-						type="email" class="form-control" id="inputEmail4"
-						placeholder="category code" th:field="*{}">
+					<label for="inputEmail4">Module Code</label> <input type="text"
+						class="form-control" placeholder="module code" th:field="*{moduleCode}">
 				</div>
-
-				<div class="form-group col-md-6">
-					<label for="inputPassword4">Sub Module Name</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="discreption" th:field="*{}">
-				</div>
-
 				<div class="form-group col-md-6">
 					<label for="inputPassword4">Module Name</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="account head code" th:field="*{}">
+						type="text" class="form-control" 
+						placeholder="module name" th:field="*{moduleName}">
 				</div>
-
 				<div class="form-group col-md-6">
 					<label for="inputPassword4">Sequence Number</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="account head code" th:field="*{}">
+						type="text" class="form-control" 
+						placeholder="sequence number" th:field="*{seqNo}">
 				</div>
-
-
 			</div>
 
+
+
+			<div class="form-group" style="margin:10px;">
+
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="radio"
+						name="inlineRadioOptions" id="inlineRadio1" value="Y">
+					<label class="form-check-label" for="inlineRadio1">Active</label>
+				</div>
+				
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="radio"
+						name="inlineRadioOptions" id="inlineRadio1" value="N">
+					<label class="form-check-label" for="inlineRadio1">In-Active</label>
+				</div>
+				
+			</div>
+			
+			<div class="row" style="margin:10px">
+				<input type="submit" value="Submit" class="btn btn-primary button"/>
+				<input type="reset" value="Reset" class="btn btn-danger button"/>
+			</div>
+
+		</div>
 		</form>
+		
+		<div class="row text-right m-10">
+			<a th:href="@{/module/list}">view module list</a>		
+		</div>
 	</div>
 
 
