--- a/src/main/resources/templates/layouts/editview/editSubModule.html
+++ b/src/main/resources/templates/layouts/editview/editSubModule.html
@@ -73,7 +73,7 @@
 
 				<div class="form-group col-md-6">
 					<label for="inputPassword4">Sequence Number</label> <input
-						type="password" class="form-control" placeholder="sequence number"
+						type="text" class="form-control" placeholder="sequence number"
 						th:field="*{seqNoSubModule}">
 				</div>
 
@@ -83,13 +83,13 @@
 					<div class="form-check form-check-inline">
 						<input class="form-check-input" type="radio"
 							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
-							class="form-check-label" for="inlineRadio1" th:field="*{acitveSubModule}">Active</label>
+							class="form-check-label" for="inlineRadio1">Active</label>
 					</div>
 
 					<div class="form-check form-check-inline">
 						<input class="form-check-input" type="radio"
 							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
-							class="form-check-label" for="inlineRadio1" th:field="*{acitveSubModule}">In-Active</label>
+							class="form-check-label" for="inlineRadio1">In-Active</label>
 					</div>
 
 				</div>
