--- a/src/main/resources/templates/layouts/Master/program.html
+++ b/src/main/resources/templates/layouts/Master/program.html
@@ -40,45 +40,80 @@
 
 		<h3>Program Master</h3>
 
+		<form th:action="@{/program/}" method="POST" th:object="${program}">
+			<div class="form-border">
 
-		<div class="form-border">
+				<div class="form-group col-md-6">
+					<label>Program Code</label> <input type="text" class="form-control"
+						placeholder="program code" th:field="*{programCode}">
+				</div>
 
-			<div class="form-group col-md-6">
-				<label for="inputEmail4">Program Code</label> <input type="email"
-					class="form-control" id="inputEmail4" placeholder="category code">
-			</div>
-			
-			<div class="form-group col-md-6">
-				<label for="inputPassword4">Program Name</label> <input
-					type="password" class="form-control" id="inputPassword4"
-					placeholder="discreption">
-			</div>
-			
-			<div class="form-group col-md-6">
-				<label for="inputPassword4">Sub Module Name</label> <input
-					type="password" class="form-control" id="inputPassword4"
-					placeholder="account head code">
-			</div>
-			
-			<div class="form-group col-md-6">
-				<label for="inputPassword4">Program Type</label> <input
-					type="password" class="form-control" id="inputPassword4"
-					placeholder="account head code">
-			</div>
-			
-			<div class="form-group col-md-6">
-				<label for="inputPassword4">Program Href</label> <input
-					type="password" class="form-control" id="inputPassword4"
-					placeholder="account head code">
-			</div>
-			
-			<div class="form-group col-md-6">
-				<label for="inputPassword4">Sequence Number</label> <input
-					type="password" class="form-control" id="inputPassword4"
-					placeholder="account head code">
-			</div>
-			
+				<div class="form-group col-md-6">
+					<label>Program Name</label> <input type="text" class="form-control"
+						placeholder="program name" th:field="*{programName}">
+				</div>
 
+				<div class="form-group col-lg-6">
+					<label class="form-label">Sub Module Name</label> <label
+						style="color: red">*</label> <select class="form-control"
+						
+						title="Department Name" th:field="*{subModuleMaster}" required>
+						<option value="">Select Sub Module</option>
+						<option th:each="subModule :  ${listSubModule}"
+							th:text="${subModule.subModuleName}"
+							th:value=" ${subModule.subModuleCode}"></option>
+					</select>
+				</div>
+
+				<div class="form-group col-md-6">
+					<label for="inputPassword4">Program Type</label> <input
+						type="text" class="form-control" placeholder="program type"
+						th:field="*{programType}">
+				</div>
+
+				<div class="form-group col-md-6">
+					<label for="inputPassword4">Program Href</label> <input
+						type="text" class="form-control" placeholder="program href"
+						th:field="*{programHrefName}">
+				</div>
+
+				<div class="form-group col-md-6">
+					<label for="inputPassword4">Sequence Number</label> <input
+						type="text" class="form-control" placeholder="sequence number"
+						th:field="*{seqNo}">
+				</div>
+
+
+				<div class="form-group" style="margin: 10px;">
+
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="radio"
+							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
+							class="form-check-label" for="inlineRadio1"
+							th:field="*{activeYn}">Active</label>
+					</div>
+
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="radio"
+							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
+							class="form-check-label" for="inlineRadio1"
+							th:field="*{activeYn}">In-Active</label>
+					</div>
+
+				</div>
+
+				<div class="row" style="margin: 10px">
+					<input type="submit" value="Submit" class="btn btn-primary button" />
+					<input type="reset" value="Reset" class="btn btn-danger button" />
+				</div>
+
+
+			</div>
+
+		</form>
+
+		<div class="row text-right m-10">
+			<a th:href="@{/program/list}">view program list</a>
 		</div>
 	</div>
 
@@ -89,7 +124,7 @@
 
 
 
-	
+
 
 
 	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
