--- a/src/main/resources/templates/layouts/editview/editProgram.html
+++ b/src/main/resources/templates/layouts/editview/editProgram.html
@@ -38,30 +38,49 @@
 
 	<div id="home-main-content">
 
-		<h3>Module Master</h3>
+		<h3>Program Master</h3>
 
-
-		<form th:action="@{/module/}" method="POST" th:object="${module}">
+		<form th:action="@{/program/}" method="POST" th:object="${program}">
 			<div class="form-border">
 
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Module Code</label> <input type="text"
-							class="form-control" placeholder="module code"
-							th:field="*{moduleCode}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Module Name</label> <input type="text"
-							class="form-control" placeholder="module name"
-							th:field="*{moduleName}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Sequence Number</label> <input
-							type="text" class="form-control" placeholder="sequence number"
-							th:field="*{seqNo}">
-					</div>
+				<div class="form-group col-md-6">
+					<label>Program Code</label> <input type="text" class="form-control"
+						placeholder="program code" th:field="*{programCode}">
 				</div>
 
+				<div class="form-group col-md-6">
+					<label>Program Name</label> <input type="text" class="form-control"
+						placeholder="program name" th:field="*{programName}">
+				</div>
+
+				<div class="form-group col-lg-6">
+					<label class="form-label">Sub Module Name</label> <label
+						style="color: red">*</label> <select class="form-control"
+						title="Department Name" th:field="*{subModuleMaster}" required>
+						<option value="">Select Sub Module</option>
+						<option th:each="subModule :  ${listSubModule}"
+							th:text="${subModule.subModuleName}"
+							th:value=" ${subModule.subModuleCode}"></option>
+					</select>
+				</div>
+
+				<div class="form-group col-md-6">
+					<label for="inputPassword4">Program Type</label> <input type="text"
+						class="form-control" placeholder="program type"
+						th:field="*{programType}">
+				</div>
+
+				<div class="form-group col-md-6">
+					<label for="inputPassword4">Program Href</label> <input type="text"
+						class="form-control" placeholder="program href"
+						th:field="*{programHrefName}">
+				</div>
+
+				<div class="form-group col-md-6">
+					<label for="inputPassword4">Sequence Number</label> <input
+						type="text" class="form-control" placeholder="sequence number"
+						th:field="*{seqNo}">
+				</div>
 
 
 				<div class="form-group" style="margin: 10px;">
@@ -87,11 +106,13 @@
 						class="btn btn-link button" />
 				</div>
 
+
 			</div>
+
 		</form>
 
 		<div class="row text-right m-10">
-			<a th:href="@{/module/list}">view module list</a>
+			<a th:href="@{/program/list}">view program list</a>
 		</div>
 	</div>
 
