--- a/src/main/resources/templates/layouts/editview/editSubModule.html
+++ b/src/main/resources/templates/layouts/editview/editSubModule.html
@@ -41,7 +41,8 @@
 		<h3>Sub-Module Master</h3>
 
 
-		<form th:action="@{/sub-module/}" th:object="${subModule}" method="post">
+		<form th:action="@{/sub-module/}" th:object="${subModule}"
+			method="post">
 
 			<div class="form-border">
 
@@ -96,8 +97,10 @@
 
 
 				<div class="row" style="margin: 10px">
-					<input type="submit" value="Submit" class="btn btn-primary button" />
-					<input type="reset" value="Reset" class="btn btn-danger button" />
+					<input type="submit" value="Update" class="btn btn-primary button" />
+					<input type="submit" value="Back"
+						onclick='javascript:window.history.back()'
+						class="btn btn-link button" />
 				</div>
 
 
