code commit@rahul
backend of designation has done

--- a/src/main/resources/templates/fragments/app-fragments.html
+++ b/src/main/resources/templates/fragments/app-fragments.html
@@ -11,15 +11,15 @@
      
     <ul th:fragment = "nav-default">
         <li><a th:href="@{/}">Home</a></li>
-        <li><a th:href="@{/products}">Products</a></li>
-        <li><a th:href="@{/about}">About</a></li>
+        <li><a th:href="@{/city/}">City</a></li>
+        <li><a th:href="@{/program/}">Program</a></li>
     </ul>
      
     <!-- Admin Navigator -->
      
     <ul th:fragment = "nav-admin">
-        <li><a th:href="@{/admin/products}">Product Management</a></li>
-        <li><a th:href="@{/admin/orders}">Order Management</a></li>
+        <li><a th:href="@{/city/}">Product Management</a></li>
+        <li><a th:href="@{/program/}">Order Management</a></li>
     </ul>
      
      
