--- a/src/main/resources/templates/layouts/Master/moduleMaster.html
+++ b/src/main/resources/templates/layouts/Master/moduleMaster.html
@@ -80,8 +80,8 @@
 			</div>
 			
 			<div class="row" style="margin:10px">
-				<input type="submit" value="Submit" class="btn btn-primary button"/>
-				<input type="reset" value="Reset" class="btn btn-danger button"/>
+				<input type="submit" value="Submit" class="btn btn-primary"/>
+				<input type="reset" value="Reset" class="btn btn-danger"/>
 			</div>
 
 		</div>
