--- a/src/main/resources/templates/layouts/editview/editProgram.html
+++ b/src/main/resources/templates/layouts/editview/editProgram.html
@@ -100,7 +100,7 @@
 				</div>
 
 				<div class="row" style="margin: 10px">
-					<input type="submit" value="Update" class="btn btn-primary button" />
+					<input type="submit" value="Update" class="btn btn-primary" />
 					<input type="submit" value="Back"
 						onclick='javascript:window.history.back()'
 						class="btn btn-link button" />
