--- a/src/main/resources/templates/layouts/listview/listofprogram.html
+++ b/src/main/resources/templates/layouts/listview/listofprogram.html
@@ -98,7 +98,7 @@
 
 							<div class="row" style="margin: 10px">
 								<input type="submit" value="Back"  onclick='javascript:window.history.back()'
-									class="btn btn-link button" /> 
+									class="btn btn-link" /> 
 							</div>
 						</div>
 					</div>
