--- a/src/main/resources/templates/layouts/financialActiveYear.html
+++ b/src/main/resources/templates/layouts/financialActiveYear.html
@@ -30,7 +30,7 @@
         
     </div>
      
-    <div id="home-nav" th:replace="~{/fragments/app-fragments :: nav-default}">
+    <div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">
         Home Nav
     </div>
  
