--- a/src/main/resources/templates/layouts/editview/editCity.html
+++ b/src/main/resources/templates/layouts/editview/editCity.html
@@ -26,10 +26,10 @@
 </head>
 <body>
 
-	<div id="home-header">ERP WhareHouse</div>
+	<div id="home-header">WhareHouse</div>
 
 	<div id="home-nav"
-		th:replace="~{/fragments/app-fragments :: nav-default}">Home Nav
+		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
 	</div>
 
 
