--- a/src/main/resources/templates/layouts/editview/editCountry.html
+++ b/src/main/resources/templates/layouts/editview/editCountry.html
@@ -29,7 +29,7 @@
 	<div id="home-header">ERP WhareHouse</div>
 
 	<div id="home-nav"
-		th:replace="~{/fragments/app-fragments :: nav-default}">Home Nav
+		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
 	</div>
 
 
