--- a/src/main/resources/templates/layouts/listview/listofserviceCategory.html
+++ b/src/main/resources/templates/layouts/listview/listofserviceCategory.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<div id="home-main-content">
-		<h2>All Module</h2>
+		<h2>Service Category List</h2>
 
 
 
@@ -65,25 +65,26 @@
 										<thead>
 											<tr>
 												<th scope="col">#</th>
-												<th scope="col">Module Code</th>
-												<th scope="col">Module Name</th>
-												<th scope="col">Inserted By</th>
-												<th scope="col">Status</th>
+												<th scope="col">Category Code</th>
+												<th scope="col">Category Type</th>
+												<th scope="col">Account Code</th>
+												<th scope="col">Description</th>
+												
 												<th scope="col">Action</th>
 											</tr>
 										</thead>
 										<tbody>
-											<tr th:each="module,iter  : ${listModule}">
+											<tr th:each="serviceCategory,iter  : ${serviceCategoryList}">
 												<td th:text="${iter.index}">1</td>
-												<td th:text="${module.moduleCode}">Garrett Winters</td>
-												<td th:text="${module.moduleName}">Garrett Winters</td>
-												<td th:text="${module.insertedBy}">Good Guys</td>
+												<td th:text="${serviceCategory.categoryCode}">Garrett Winters</td>
+												<td th:text="${serviceCategory.categoryType}">Garrett Winters</td>
+												<td th:text="${serviceCategory.accountCode}">Garrett Winters</td>
+												<td th:text="${serviceCategory.description}">Garrett Winters</td>
+												
+												
 
-												<td><span class="badge bg-success"
-													th:text="${module.active}">Active</span></td>
-
-												<td><span> <a th:href="@{/module/edit/{id}(id=${module.moduleCode})}">edit</a></span> <span> <a
-														th:href="@{/module/delete/{id}(id=${module.moduleCode})}">delete</a></span></td>
+												<td><span> <a th:href="@{/servicecategory/edit/{id}(id=${serviceCategory.categoryCode})}">edit</a></span> <span> <a
+														th:href="@{/servicecategory/delete/{id}(id=${serviceCategory.categoryCode})}">delete</a></span></td>
 											</tr>
 
 
