code commit@rahul
error code

--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -189,14 +189,14 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="indItemCode0" readonly title="" required
-									name="openIndent[0].opeIndentDetaill.indItemCode"></td>
+									name="opeIndentDetail[0].indItemCode"></td>
 								<!-- item description -->
 								<td><input type="text" style="width: 120px;"
 									id="salaryFrom" required title="Salary"></td>
 
 								<td><input type="text" style="width: 90px;"
 									id="qtyInStock0"  title="" required
-									name="openIndent[0].opeIndentDetaill.qtyInStock"></td>
+									name="opeIndentDetail[0].qtyInStock"></td>
 
 
 
@@ -204,20 +204,20 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="qtyProcured0" title="" required
-									name="openIndent[0].opeIndentDetaill.qtyProcured"></td>
+									name="opeIndentDetail[0].qtyProcured"></td>
 
 								<td><input type="text" style="width: 90px;"
 									id="qtyProcured0" title="" required
-									name="openIndent[0].opeIndentDetaill.pipelineQty"></td>
+									name="opeIndentDetail[0].pipelineQty"></td>
 
 
-								<td><input type="number" style="width: 90px;" id="indQty0"
+								<td><input type="text" style="width: 90px;" id="indQty0"
 									min="18" title="Age from" required
-									name="openIndent[0].opeIndentDetaill.indQty"></td>
+									name="opeIndentDetail[0].indQty"></td>
 
-								<td><input type="number" max="45" style="width: 90px;"
+								<td><input type="text" max="45" style="width: 90px;"
 									id="ageTo" required
-									name="openIndent[0].opeIndentDetaill.approvedQty"></td>
+									name="opeIndentDetail[0].approvedQty"></td>
 
 								<!-- gor status -->
 								<td><input type="text" style="width: 120px;"
@@ -226,24 +226,24 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="expMaxMonth" required title="max experience"
-									name="openIndent[0].opeIndentDetaill.currencyCode"></td>
+									name="opeIndentDetail[0].currencyCode"></td>
 
 								<td><input type="text" style="width: 90px;"
 									id="expMaxMonth" required title="max experience"
-									name="openIndent[0].opeIndentDetaill.conversionvalue"></td>
+									name="opeIndentDetail[0].conversionvalue"></td>
 
 
 								<td><input type="text" style="width: 120px;"
 									id="technicalQualification" required
 									title="Technical Qualification"
-									name="openIndent[0].opeIndentDetaill.itemRate"></td>
+									name="opeIndentDetail[0].itemRate"></td>
 
 								<!--unit  -->
 								<td><input type="text" style="width: 120px;" id="salaryTo"
 									required></td>
 
 								<td><input type="text" style="width: 120px;" id="salaryTo"
-									required name="openIndent[0].opeIndentDetaill.totalValue"></td>
+									required name="opeIndentDetail[0].totalValue"></td>
 
 								<!-- total value (INR)  -->
 								<td><input type="text" style="width: 120px;" id="salaryTo"
@@ -255,12 +255,12 @@
 
 								<td><input type="text" style="width: 90px;"
 									id="purStatusItemWise" required title="minimum experience"
-									name="openIndent[0].opeIndentDetaill.purStatusItemWise"></td>
+									name="opeIndentDetail[0].purStatusItemWise"></td>
 
 
 								<td><input type="text" style="width: 120px;"
 									id="indPurpose0" required
-									name="openIndent[0].opeIndentDetaill.indPurpose"></td>
+									name="opeIndentDetail[0].indPurpose"></td>
 
 								<td></td>
 							</tr>
