--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -26,6 +26,10 @@
     <link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
     <link href="/webjars/nprogress/nprogress.css" rel="stylesheet">
+    
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
+    
 
   
     
